# il2cpp-rs

./: .gitmodules  Cargo.toml
src/: method_info.rs
